<resources>
    <string name="app_name">Finanza Pro</string>

    <string name="register_title">Registrar Gasto</string>
    <string name="title_amount">MONTO DEL GASTO</string>
    <string name="currency">S/</string>
    <string name="default_amount">0.00</string>
    <string name="label_description">DESCRIPCIÓN</string>
    <string name="hint_description">Ej. Compra de supermercado</string>
    <string name="label_category">CATEGORÍA</string>
    <string name="hint_category">Seleccionar categoría</string>
    <string name="label_date">FECHA</string>
    <string name="label_time">HORA</string>
    <string name="label_payment">MÉTODO DE PAGO</string>
    <string name="payment_cash">EFECTIVO</string>
    <string name="payment_card">TARJETA</string>
    <string name="action_save">GUARDAR</string>

    <string name="buton_aceptar">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="analysis_resumen">RESUMEN MENSUAL</string>
    <string name="analysis_total_gastado">Total Gastado</string>
    <string name="analysis_promedio_diario">Promedio Diario</string>
    <string name="analysis_este_mes">Este Mes</string>

    <string name="category_distribution">DISTRIBUCIÓN POR CATEGORÍA</string>
    <string name="category_gastos">Gastos</string>
    <string name="category_details">DETALLE POR CATEGORIA</string>
    <string name="category_no_data">No hay datos para mostrar</string>
    <string name="analysis_detail_prox">Análisis detallado próximamente</string>


</resources>